--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     grid-template-columns: repeat(4,300px);
     grid-template-rows:60px repeat(6,auto);
     gap: 1rem;
+    padding: 0 1rem;
 }
 
 h1{
@@ -118,7 +119,7 @@ article{
 
     .container{
         display: grid;
-        grid-template-columns: repeat(4,250px);
+        grid-template-columns: repeat(4,auto);
         grid-template-rows:60px repeat(6,140px);
         gap: 1rem;
     }
@@ -162,7 +163,7 @@ article{
 
     .container{
         display: grid;
-        grid-template-columns: repeat(3,250px);
+        grid-template-columns: repeat(3,auto);
         grid-template-rows:60px repeat(6,140px);
         gap: 1rem;
     }
@@ -207,7 +208,8 @@ article{
 
     .container{
         display: grid;
-        grid-template-columns: repeat(2,300px);
+        grid-template-columns: repeat(2,auto);
+        min-width: auto;
         grid-template-rows:60px repeat(10,140px);
         gap: 1rem;
     }
@@ -261,7 +263,7 @@ article{
 
     .container{
         display: grid;
-        grid-template-columns: repeat(1,400px);
+        grid-template-columns: repeat(1,auto);
         grid-template-rows:60px repeat(19,140px);
         gap: 1rem;
     }
@@ -297,7 +299,7 @@ article{
     }
     .content6{
         grid-column: 1/2;
-        grid-row: 17/21 ;
+        grid-row: 17/20 ;
        
     }
     h1{
